--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <html>
 
-    <body>
-        <h5 style="margin: auto";>
+<head>
+    <link rel="stylesheet" href="css/index.css">
+</head>
+
+<body>
+    <div>
+        <h1>
         This Page is under construction
-        </h5>
-    </body>
-    
+        </h1>
+    </div>
+</body>
+
 </html>
