--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300" type="text/css" />
     <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
     <div>
-        <h1>
-        This Page is under construction
+        <h1>PeriSkope <br>
+        Coming Soon!
         </h1>
     </div>
 </body>
