--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <html>
 
 <head>
+    <title>PeriSkope</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300" type="text/css" />
     <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
     <div>
-        <h1>PeriSkope <br>
-        Coming Soon!
+        <h1>PeriSkope <br> Coming Soon!
         </h1>
     </div>
+    <canvas id="nokey"></canvas>
+    
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src="js/mouseAnimation.js"></script>
 </body>
 
 </html>
